test/expected/explain_co_less_rck_i++default.out
explain int operator<(S const&) const = default
        ^
9: error: invalid operator "<" return type "int"; must be "bool" or a typedef thereof
